--- a/css/app.css
+++ b/css/app.css
@@ -105,6 +105,10 @@ ul li {
 
 @media only screen and (max-width: 499px) {
 
+.header h1 {
+	font-size: 0;
+}
+
 .face h2 {
 	height: 63vw;
 	margin-right: 15vw;
