--- a/css/uzem.less
+++ b/css/uzem.less
@@ -1,6 +1,10 @@
 /* font families
+  OLD
   font-family: 'Montserrat', sans-serif;
   font-family: 'Domine', serif;
+  NEW
+  font-family: 'Pathway Gothic One', sans-serif;
+  font-family: 'Ubuntu Mono', monospace;
 */
 
 html {
@@ -8,7 +12,7 @@ html {
 }
 
 body {
-  font-family: 'Domine', serif;
+  font-family: 'Ubuntu Mono', monospace;
   font-size: 16px;
   color: black;
   padding: 0;
@@ -32,7 +36,7 @@ header {
 }
 
 header h1 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Pathway Gothic One', sans-serif;
   font-weight: 600;
   font-size: 35px;
   margin-bottom: 0px;
@@ -92,7 +96,7 @@ timeline div.yearmarkers year span {
   position: absolute;
   bottom: 20px;
   left: 20px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Pathway Gothic One', sans-serif;
   font-weight: 600;
   font-size: 35px;
   color: black;
@@ -127,7 +131,7 @@ era {
   height: 3vh;
   border-radius: 3vh;
   color: white;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Pathway Gothic One', sans-serif;
   font-weight: 600;
   font-size: 2vh;
   line-height: 3vh;
@@ -193,7 +197,7 @@ reference div.refcontent.bottom-full {
 }
 
 reference div.refcontent h2 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Pathway Gothic One', sans-serif;
   font-weight: 600;
   font-size: 4vh;
   display: block;
@@ -222,7 +226,7 @@ reference div.refcontent p.image {
 }
 
 reference div.refcontent date {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Pathway Gothic One', sans-serif;
   font-weight: 600;
   height: 2vh;
   font-size: 1.2vh;
