--- a/css/uzem.less
+++ b/css/uzem.less
@@ -37,6 +37,7 @@ header {
 
 header h1 {
   font-family: 'Pathway Gothic One', sans-serif;
+  text-transform: uppercase;
   font-weight: 600;
   font-size: 35px;
   margin-bottom: 0px;
@@ -97,6 +98,7 @@ timeline div.yearmarkers year span {
   bottom: 20px;
   left: 20px;
   font-family: 'Pathway Gothic One', sans-serif;
+  text-transform: uppercase;
   font-weight: 600;
   font-size: 35px;
   color: black;
@@ -132,6 +134,7 @@ era {
   border-radius: 3vh;
   color: white;
   font-family: 'Pathway Gothic One', sans-serif;
+  text-transform: uppercase;
   font-weight: 600;
   font-size: 2vh;
   line-height: 3vh;
@@ -198,6 +201,7 @@ reference div.refcontent.bottom-full {
 
 reference div.refcontent h2 {
   font-family: 'Pathway Gothic One', sans-serif;
+  text-transform: uppercase;
   font-weight: 600;
   font-size: 4vh;
   display: block;
@@ -227,6 +231,7 @@ reference div.refcontent p.image {
 
 reference div.refcontent date {
   font-family: 'Pathway Gothic One', sans-serif;
+  text-transform: uppercase;
   font-weight: 600;
   height: 2vh;
   font-size: 1.2vh;
