--- a/css/uzem.less
+++ b/css/uzem.less
@@ -13,6 +13,7 @@ html {
 
 body {
   font-family: 'Ubuntu Mono', monospace;
+  font-weight: 400;
   font-size: 16px;
   color: black;
   padding: 0;
