--- a/css/uzem.less
+++ b/css/uzem.less
@@ -24,7 +24,7 @@ html {
 }
 
 body {
-  .basefont
+  .basefont;
   font-size: 16px;
   padding: 0;
   margin: 0;
@@ -47,7 +47,7 @@ header {
   box-sizing: border-box;
 
   h1 {
-    .displayfont
+    .displayfont;
     font-size: 35px;
     margin-bottom: 0px;
     display: inline;
@@ -64,7 +64,7 @@ header {
     float: right;
     margin-right: 20px;
   }
-  
+
 }
 
 }
