--- a/css/uzem.less
+++ b/css/uzem.less
@@ -68,3 +68,27 @@ header {
   }
 
 }
+
+timeline {
+
+    width: 100%;
+    height: 100vh;
+    display: block;
+    bottom: 0vh;
+    position: fixed;
+    overflow: scroll;
+
+
+    .line {
+      display: block;
+      width: 1400%;
+      background: @basecolor;
+      background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 10%, rgba(0,0,0,1) 100%);
+      background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 10%,rgba(0,0,0,1) 100%);
+      background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 10%,rgba(0,0,0,1) 100%);
+      height: 0.5vh;
+      position: absolute;
+      top: 49.75vh;
+    }
+
+}
