--- a/css/uzem.less
+++ b/css/uzem.less
@@ -38,7 +38,6 @@ a {
 }
 
 header {
-
   text-align: left;
   position: fixed;
   width: 100%;
@@ -70,25 +69,46 @@ header {
 }
 
 timeline {
+  width: 100%;
+  height: 100vh;
+  display: block;
+  bottom: 0vh;
+  position: fixed;
+  overflow: scroll;
 
-    width: 100%;
-    height: 100vh;
+  .line {
     display: block;
-    bottom: 0vh;
-    position: fixed;
-    overflow: scroll;
+    width: 1400%;
+    background: @basecolor;
+    background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 10%, rgba(0,0,0,1) 100%);
+    background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 10%,rgba(0,0,0,1) 100%);
+    background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 10%,rgba(0,0,0,1) 100%);
+    height: 0.5vh;
+    position: absolute;
+    top: 49.75vh;
+  }
 
+  .yearmarkers {
+    position: absolute;
+    top: 0;
+    left: 0;
 
-    .line {
+    year {
+      height: 100vh;
+      width: 100vw;
       display: block;
-      width: 1400%;
-      background: @basecolor;
-      background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 10%, rgba(0,0,0,1) 100%);
-      background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 10%,rgba(0,0,0,1) 100%);
-      background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 10%,rgba(0,0,0,1) 100%);
-      height: 0.5vh;
       position: absolute;
-      top: 49.75vh;
-    }
+      background: rgba(0,0,0,0.1);
+      box-sizing: border-box;
 
+      span {
+        .displayfont
+        display: block;
+        position: absolute;
+        bottom: @basepadding*4;
+        left: @basepadding*4;
+        font-size: 35px;
+      }
+    }
+  }
 }
