--- a/css/uzem.less
+++ b/css/uzem.less
@@ -102,7 +102,7 @@ timeline {
       box-sizing: border-box;
 
       span {
-        .displayfont
+        .displayfont;
         display: block;
         position: absolute;
         bottom: @basepadding*4;
