--- a/css/uzem.less
+++ b/css/uzem.less
@@ -101,6 +101,8 @@ timeline {
       background: rgba(0,0,0,0.1);
       box-sizing: border-box;
 
+      &:nth-child(odd) { background: rgba(0,0,0,0); }
+
       span {
         .displayfont;
         display: block;
