--- a/css/uzem.less
+++ b/css/uzem.less
@@ -101,9 +101,13 @@ timeline {
       background: rgba(0,0,0,0.1);
       box-sizing: border-box;
 
-      &:nth-child(odd) { background: rgba(0,0,0,0); }
+      &:nth-child(odd) {
+        background: rgba(0,0,0,0);
+      }
 
-      &:nth-child(@yearnumber) { left: 100vw * (@yearnumber - 1); }
+      &:nth-child(@yearnumber) {
+        left: 100vw * @yearnumber - 1;
+      }
 
       span {
         .displayfont;
