--- a/css/uzem.less
+++ b/css/uzem.less
@@ -7,7 +7,7 @@
 
 @basepadding: 5px;
 
-@breakpoint1: 500px
+@breakpoint1: 500px;
 
 .basefont {
   font-family: 'Ubuntu Mono', monospace;
@@ -97,6 +97,14 @@ timeline {
   bottom: 0vh;
   position: fixed;
   overflow: scroll;
+
+  @media screen and (max-width: @breakpoint1) {
+    width: 100%;
+    height: 1400vh;
+    top: 30vh;
+    position: absolute;
+    overflow: visible;
+  }
 
   .line {
     display: block;
