--- a/css/uzem.less
+++ b/css/uzem.less
@@ -99,7 +99,6 @@ timeline {
   overflow: scroll;
 
   @media screen and (max-width: @breakpoint1) {
-    width: 100%;
     height: 1400vh;
     top: 30vh;
     position: absolute;
@@ -116,6 +115,17 @@ timeline {
     height: 0.5vh;
     position: absolute;
     top: 49.75vh;
+
+    @media screen and (max-width: @breakpoint1) {
+      width: 0.5vw;
+      height: 1400vh;
+      left: 49.75vw;
+      top: 0;
+      background: @basecolor;
+      background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 10%, rgba(0,0,0,1) 100%);
+      background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 10%,rgba(0,0,0,1) 100%);
+      background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 10%,rgba(0,0,0,1) 100%);
+    }
   }
 
   .yearmarkers {
@@ -151,6 +161,12 @@ timeline {
         bottom: @basepadding * 4;
         left: @basepadding * 4;
         font-size: 35px;
+
+        @media screen and (max-width: @breakpoint1) {
+          bottom: auto;
+          top: @basepadding * 4;
+          z-index: 15;
+        }
       }
     }
   }
