--- a/css/uzem.less
+++ b/css/uzem.less
@@ -150,7 +150,7 @@ timeline {
         &:nth-child(@{counter}) {
           left: 100vw * (@counter - 1);
           @media screen and (max-width: @breakpoint1) {
-            top: 100vw * (@counter - 1);
+            top: 100vh * (@counter - 1);
             left: 0;
           }
         }
