--- a/css/uzem.less
+++ b/css/uzem.less
@@ -4,10 +4,10 @@
 */
 
 @basecolor: black;
-
 @basepadding: 5px;
 
 @breakpoint1: 500px;
+@numberofyears: 4;
 
 .basefont {
   font-family: 'Ubuntu Mono', monospace;
@@ -99,7 +99,7 @@ timeline {
   overflow: scroll;
 
   @media screen and (max-width: @breakpoint1) {
-    height: 1400vh;
+    height: 100vh * @numberofyears;
     top: 30vh;
     position: absolute;
     overflow: visible;
@@ -107,7 +107,7 @@ timeline {
 
   .line {
     display: block;
-    width: 1400%;
+    width: 100% * @numberofyears;
     background: @basecolor;
     background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 10%, rgba(0,0,0,1) 100%);
     background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 10%,rgba(0,0,0,1) 100%);
@@ -118,7 +118,7 @@ timeline {
 
     @media screen and (max-width: @breakpoint1) {
       width: 1vw;
-      height: 1400vh;
+      height: 100vh * @numberofyears;
       left: 49.5vw;
       top: 0;
       background: @basecolor;
@@ -156,7 +156,7 @@ timeline {
         }
       }
 
-      .yearloop(4);
+      .yearloop(@numberofyears);
 
       span {
         .displayfont;
