--- a/css/uzem.less
+++ b/css/uzem.less
@@ -153,7 +153,7 @@ timeline {
             top: 100vh * (@counter - 1);
             left: 0;
           }
-          span {
+          &:after {
             @actualyear: 2017 - @counter + 1;
             content: "@{actualyear}";
           }
@@ -162,7 +162,7 @@ timeline {
 
       .yearloop(@numberofyears);
 
-      span {
+      &after {
         .displayfont;
         display: block;
         position: absolute;
