Fixing the after element

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -162,7 +162,7 @@ timeline {
 
       .yearloop(@numberofyears);
 
-      &after {
+      &:after {
         .displayfont;
         display: block;
         position: absolute;
