Trying to make old years smaller

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -135,8 +135,6 @@ timeline {
     left: 0;
 
     year {
-      height: 100vh;
-      width: 100vw;
       display: block;
       position: absolute;
       background: rgba(0,0,0,0.1);
@@ -149,10 +147,25 @@ timeline {
       .yearloop(@counter) when (@counter > 0) {
         .yearloop((@counter - 1));
         &:nth-child(@{counter}) {
-          left: 100vw * (@counter - 1);
-          @media screen and (max-width: @breakpoint1) {
-            top: 100vh * (@counter - 1);
-            left: 0;
+          if @counter > @numberofyears - 15 {
+            left: 100vw * (@counter - 1);
+            height: 100vh;
+            width: 100vw;
+            @media screen and (max-width: @breakpoint1) {
+              top: 100vh * (@counter - 1);
+              left: 0;
+            }
+          }
+          else {
+            left: 100vw * 15 + 50vw * (@counter - 16);
+            height: 100vh;
+            width: 50vw;
+            @media screen and (max-width: @breakpoint1) {
+              height: 50vh;
+              width: 100vw;
+              top: 100vh * 15 + 50vw * (@counter - 16);
+              left: 0;
+            }
           }
           &:after {
             @actualyear: 2017 - @counter + 1;
