--- a/css/uzem.less
+++ b/css/uzem.less
@@ -154,7 +154,7 @@ timeline {
             top: 100vh * (@counter - 1);
             left: 0;
           }
-          when (@counter > @numberofyears - 15) {
+          when (@counter < 20) {
             left: 100vw * 15 + 50vw * (@counter - 16);
             height: 100vh;
             width: 50vw;
