--- a/css/uzem.less
+++ b/css/uzem.less
@@ -154,8 +154,8 @@ timeline {
             top: 100vh * (@counter - 1);
             left: 0;
           }
-          
-          & when (@counter < 20) {
+
+          & when (@counter > 15) {
             left: 100vw * 15 + 50vw * (@counter - 16);
             height: 100vh;
             width: 50vw;
