Fixing a couple of stuff

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -109,7 +109,7 @@ timeline {
 
   .line {
     display: block;
-    width: 100% * @numberofhalfyears + 50% * @numberofyears;
+    width: (100% * @numberofhalfyears) + (50% * @numberofyears - @numberofhalfyears);
     background: @basecolor;
     background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%, rgba(0,0,0,0) 100%);
     background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%,rgba(0,0,0,0) 100%);
@@ -120,7 +120,7 @@ timeline {
 
     @media screen and (max-width: @breakpoint1) {
       width: 1vw;
-      height: 100vh * @numberofhalfyears + 50vh * @numberofyears;
+      height: (100vh * @numberofhalfyears) + (50vh * @numberofyears - @numberofhalfyears);
       left: 49.5vw;
       top: 0;
       background: @basecolor;
@@ -157,11 +157,11 @@ timeline {
           }
 
           & when (@counter > @numberofhalfyears + 1) {
-            left: 100vw * @numberofhalfyears + 50vw * (@counter - @numberofhalfyears - 1);
+            left: 100vw * @numberofhalfyears + 50vw * (@counter - @numberofhalfyears);
             height: 100vh;
             width: 50vw;
             @media screen and (max-width: @breakpoint1) {
-              top: 100vh * @numberofhalfyears + 50vw * (@counter - @numberofhalfyears - 1);
+              top: 100vh * @numberofhalfyears + 50vw * (@counter - @numberofhalfyears);
               height: 50vh;
               width: 100vw;
               left: 0;
