--- a/css/uzem.less
+++ b/css/uzem.less
@@ -8,7 +8,7 @@
 
 @breakpoint1: 500px;
 @numberofyears: 35;
-@numberofhalfyears: 15;
+@numberoffullyears: 15;
 
 .basefont {
   font-family: 'Ubuntu Mono', monospace;
@@ -109,7 +109,7 @@ timeline {
 
   .line {
     display: block;
-    width: (100% * @numberofhalfyears) + (50% * @numberofyears - @numberofhalfyears);
+    width: (100% * @numberoffullyears) + (50% * (@numberofyears - @numberoffullyears));
     background: @basecolor;
     background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%, rgba(0,0,0,0) 100%);
     background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%,rgba(0,0,0,0) 100%);
@@ -120,7 +120,7 @@ timeline {
 
     @media screen and (max-width: @breakpoint1) {
       width: 1vw;
-      height: (100vh * @numberofhalfyears) + (50vh * @numberofyears - @numberofhalfyears);
+      height: (100vh * @numberoffullyears) + (50vh * (@numberofyears - @numberoffullyears));
       left: 49.5vw;
       top: 0;
       background: @basecolor;
@@ -156,12 +156,12 @@ timeline {
             left: 0;
           }
 
-          & when (@counter > @numberofhalfyears + 1) {
-            left: 100vw * @numberofhalfyears + 50vw * (@counter - @numberofhalfyears);
+          & when (@counter > @numberoffullyears + 1) {
+            left: 100vw * @numberoffullyears + 50vw * (@counter - @numberoffullyears);
             height: 100vh;
             width: 50vw;
             @media screen and (max-width: @breakpoint1) {
-              top: 100vh * @numberofhalfyears + 50vw * (@counter - @numberofhalfyears);
+              top: 100vh * @numberoffullyears + 50vw * (@counter - @numberoffullyears);
               height: 50vh;
               width: 100vw;
               left: 0;
