--- a/css/uzem.less
+++ b/css/uzem.less
@@ -189,6 +189,21 @@ timeline {
           z-index: 15;
         }
       }
+
+      reference {
+        .monthloop(@counter) when (@counter > 0) {
+          .monthloop((@counter - 1));
+          &.offset-(@{counter}) {
+            left: (100vw / 12) * (12 - @counter);
+            @media screen and (max-width: @breakpoint1) {
+              top: (100vh / 12) * (12 - @counter);
+              left: 0;
+            }
+          }
+        }
+
+        .monthloop(12);
+      }
     }
   }
 }
