--- a/css/uzem.less
+++ b/css/uzem.less
@@ -195,7 +195,7 @@ timeline {
 
         .monthloop(@counter) when (@counter > 0) {
           .monthloop((@counter - 1));
-          &.offset-(@{counter}) {
+          &.offset-@{counter} {
             left: (100vw / 12) * (12 - @counter);
             @media screen and (max-width: @breakpoint1) {
               top: (100vh / 12) * (12 - @counter);
