--- a/css/uzem.less
+++ b/css/uzem.less
@@ -206,6 +206,13 @@ timeline {
         }
 
         .monthloop(12);
+
+        .odd {
+          top: 50vh;
+          @media screen and (max-width: @breakpoint1) {
+            left: 50vw;
+          }
+        }
       }
     }
   }
