--- a/css/uzem.less
+++ b/css/uzem.less
@@ -207,7 +207,7 @@ timeline {
 
         .monthloop(12);
 
-        .odd {
+        &.odd {
           top: 50vh;
           @media screen and (max-width: @breakpoint1) {
             left: 50vw;
