Styles for references

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -196,7 +196,7 @@ timeline {
         height: 50vh;
         width: auto;
         @media screen and (max-width: @breakpoint1) {
-          width: 50vw
+          width: 50vw;
           height: auto;
         }
 
@@ -221,6 +221,19 @@ timeline {
             left: 50vw;
           }
         }
+
+        date {
+
+        }
+
+        h3 {
+          .displayfont;
+        }
+
+        p {
+
+        }
+
       }
     }
   }
