--- a/css/uzem.less
+++ b/css/uzem.less
@@ -93,7 +93,7 @@ header {
 }
 
 timeline {
-  width: (100% * @numberoffullyears) + (50% * (@numberofyears - @numberoffullyears + 1));
+  width: (100vw * @numberoffullyears) + (50vw * (@numberofyears - @numberoffullyears + 1));
   height: 100vh;
   display: block;
   bottom: 0vh;
@@ -109,11 +109,11 @@ timeline {
 
   .line {
     display: block;
-    width: (100% * @numberoffullyears) + (50% * (@numberofyears - @numberoffullyears + 1));
+    width: (100vw * @numberoffullyears) + (50vw * (@numberofyears - @numberoffullyears + 1));
     background: @basecolor;
-    background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 2%, rgba(0,0,0,1) 98%, rgba(0,0,0,0) 100%);
-    background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 2%, rgba(0,0,0,1) 98%,rgba(0,0,0,0) 100%);
-    background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 2%, rgba(0,0,0,1) 98%,rgba(0,0,0,0) 100%);
+    background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%, rgba(0,0,0,0) 100%);
+    background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%,rgba(0,0,0,0) 100%);
+    background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%,rgba(0,0,0,0) 100%);
     height: 0.5vh;
     position: absolute;
     top: 49.75vh;
