--- a/css/uzem.less
+++ b/css/uzem.less
@@ -93,7 +93,7 @@ header {
 }
 
 timeline {
-  width: (100vw * @numberoffullyears) + (50vw * (@numberofyears - @numberoffullyears + 1));
+  width: 100vw;
   height: 100vh;
   display: block;
   bottom: 0vh;
