--- a/css/uzem.less
+++ b/css/uzem.less
@@ -195,6 +195,8 @@ timeline {
         position: absolute;
         height: 50vh;
         width: auto;
+        box-sizing: border-box;
+
         @media screen and (max-width: @breakpoint1) {
           width: 50vw;
           height: auto;
@@ -228,6 +230,11 @@ timeline {
 
         h3 {
           .displayfont;
+          font-size: 3vw;
+
+          @media screen and (max-width: @breakpoint1) {
+            font-size: 3vh;
+          }
         }
 
         p {
