--- a/css/uzem.less
+++ b/css/uzem.less
@@ -234,11 +234,11 @@ timeline {
 
           @media screen and (max-width: @breakpoint1) {
             font-size: 3vh;
+            padding-left: @basepadding * 4;
           }
         }
 
         p {
-          .displayfont;
           font-size: 2vw;
 
           @media screen and (max-width: @breakpoint1) {
