--- a/css/uzem.less
+++ b/css/uzem.less
@@ -229,6 +229,8 @@ timeline {
           @media screen and (max-width: @breakpoint1) {
             background: @basecolor;
             color: white;
+            display: block;
+            font-size: 1.5vw;
           }
         }
 
@@ -248,6 +250,7 @@ timeline {
           @media screen and (max-width: @breakpoint1) {
             font-size: 2vh;
             padding-left: @basepadding * 4;
+            padding-right: @basepadding * 2;
           }
         }
 
