--- a/css/uzem.less
+++ b/css/uzem.less
@@ -230,13 +230,15 @@ timeline {
             background: @basecolor;
             color: white;
             display: block;
-            font-size: 1.5vw;
+            font-size: 1.5vh;
           }
         }
 
         h3 {
           .displayfont;
           font-size: 3vw;
+          margin-top: 0.7em;
+          margin-bottom: 0.7em;
 
           @media screen and (max-width: @breakpoint1) {
             font-size: 3vh;
