--- a/css/uzem.less
+++ b/css/uzem.less
@@ -231,6 +231,11 @@ timeline {
             color: white;
             display: block;
             font-size: 1.5vh;
+            padding-left: @basepadding * 4;
+            padding-right: @basepadding * 2;
+            padding-top: @basepadding / 2;
+            padding-bottom: @basepadding / 2;
+            box-sizing: border-box;
           }
         }
 
