--- a/css/uzem.less
+++ b/css/uzem.less
@@ -274,7 +274,7 @@ timeline {
 
           h3 {
             @media screen and (min-width: @breakpoint1) {
-              display: table;
+              display: table-row-group;
               vertical-align: bottom;
             }
           }
