--- a/css/uzem.less
+++ b/css/uzem.less
@@ -261,6 +261,19 @@ timeline {
           @media screen and (max-width: @breakpoint1) {
             left: 50vw;
           }
+
+          date {
+            @media screen and (min-width: @breakpoint1) {
+              display: block;
+              width: 50vh;
+              transform: rotateZ(-90deg);
+              transform-origin: top left;
+              top: 50vh;
+              background: @basecolor;
+              position: relative;
+              color: white;
+            }
+          }
         }
 
         &.odd-1 {
