--- a/css/uzem.less
+++ b/css/uzem.less
@@ -237,6 +237,10 @@ timeline {
             transform-origin: top left;
             top: 50vh;
             position: relative;
+            padding-left: @basepadding * 4;
+            padding-right: @basepadding * 4;
+            padding-top: @basepadding / 2;
+            padding-bottom: @basepadding / 2;
           }
 
         }
