--- a/css/uzem.less
+++ b/css/uzem.less
@@ -193,15 +193,17 @@ timeline {
       reference {
         display: block;
         position: absolute;
-        height: 50vh;
-        max-width: 25vw;
-        width: auto;
         box-sizing: border-box;
 
         @media screen and (max-width: @breakpoint1) {
           width: 50vw;
-          height: auto;
-          max-width: none;
+        }
+
+        @media screen and (min-width: @breakpoint1) {
+          padding-left: @basepadding * 4;
+          height: 50vh;
+          max-width: 25vw;
+          width: auto;
         }
 
         .monthloop(@counter) when (@counter > 0) {
@@ -241,6 +243,7 @@ timeline {
             padding-right: @basepadding * 4;
             padding-top: @basepadding / 2;
             padding-bottom: @basepadding / 2;
+            margin-left: @basepadding * -4;
           }
 
         }
