Now real padding fix

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -200,7 +200,7 @@ timeline {
         }
 
         @media screen and (min-width: @breakpoint1) {
-          padding-left: @basepadding * 8;
+          padding-left: 5vw;
           height: 50vh;
           max-width: 25vw;
           width: auto;
@@ -243,7 +243,7 @@ timeline {
             padding-right: @basepadding * 4;
             padding-top: @basepadding / 2;
             padding-bottom: @basepadding / 2;
-            margin-left: @basepadding * -8;
+            margin-left: -5vw;
           }
 
         }
