--- a/css/uzem.less
+++ b/css/uzem.less
@@ -286,6 +286,9 @@ timeline {
             @media screen and (max-width: @breakpoint1) {
               text-align: right;
             }
+            @media screen and (min-width: @breakpoint1) {
+              text-align: right;
+            }
           }
 
           h3 {
