--- a/css/uzem.less
+++ b/css/uzem.less
@@ -305,6 +305,7 @@ timeline {
             @media screen and (min-width: @breakpoint1) {
               display: table;
               vertical-align: bottom;
+              max-width: 20vw;
             }
           }
         }
