--- a/css/uzem.less
+++ b/css/uzem.less
@@ -71,7 +71,7 @@ header {
   h2, h3 {
     font-size: @basepadding * 3;
     margin-left: @basepadding * 2;
-    display: inline;
+    display: inline-block;
     font-weight: 400;
 
     @media screen and (max-width: @breakpoint1) {
