--- a/css/uzem.less
+++ b/css/uzem.less
@@ -111,9 +111,9 @@ timeline {
     display: block;
     width: (100vw * @numberoffullyears) + (50vw * (@numberofyears - @numberoffullyears + 1));
     background: @basecolor;
-    background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 3%, rgba(0,0,0,1) 100%);
-    background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 3%, rgba(0,0,0,1) 100%);
-    background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 3%, rgba(0,0,0,1) 100%);
+    background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 3%, rgba(0,0,0,1) 99%, rgba(0,0,0,0) 100%);
+    background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 3%, rgba(0,0,0,1) 99%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 3%, rgba(0,0,0,1) 99%, rgba(0,0,0,0) 100%);
     height: 0.5vh;
     position: absolute;
     top: 49.75vh;
@@ -124,9 +124,9 @@ timeline {
       left: 49.5vw;
       top: 0;
       background: @basecolor;
-      background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 3%, rgba(0,0,0,1) 100%);
-      background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 3%, rgba(0,0,0,1) 100%);
-      background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 3%, rgba(0,0,0,1) 100%);
+      background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 3%, rgba(0,0,0,1) 99%, rgba(0,0,0,0) 100%);
+      background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 3%, rgba(0,0,0,1) 99%, rgba(0,0,0,0) 100%);
+      background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 3%, rgba(0,0,0,1) 99%, rgba(0,0,0,0) 100%);
     }
   }
 
