--- a/css/uzem.less
+++ b/css/uzem.less
@@ -4,6 +4,7 @@
 */
 
 @basecolor: black;
+@link: #3181FF;
 @basepadding: 5px;
 
 @breakpoint1: 500px;
@@ -36,8 +37,8 @@ body {
 }
 
 a {
-  text-decoration: underline;
-  color: @basecolor;
+  text-decoration: none;
+  color: @link;
 }
 
 header {
