--- a/css/uzem.less
+++ b/css/uzem.less
@@ -51,6 +51,11 @@ header {
   z-index: 100;
   box-sizing: border-box;
 
+  a {
+    text-decoration: underline;
+    color: @basecolor;
+  }
+
   @media screen and (max-width: @breakpoint1) {
     text-align: center;
     position: absolute;
