--- a/css/uzem.less
+++ b/css/uzem.less
@@ -83,6 +83,7 @@ header {
     margin-left: @basepadding * 2;
     display: inline-block;
     font-weight: 400;
+    background-color: rgba(255,255,255,0.7);
 
     @media screen and (max-width: @breakpoint1) {
       margin-left: 0;
@@ -325,7 +326,7 @@ timeline {
 
         &.odd-1 {
           display: table;
-          
+
           @media screen and (max-width: @breakpoint1) {
             left: 50.5vw;
           }
