--- a/css/uzem.less
+++ b/css/uzem.less
@@ -20,6 +20,7 @@
 
 .basefont {
   font-family: 'Ubuntu Mono', monospace;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-weight: 400;
   color: @basecolor;
 }
