Font change again

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -19,7 +19,7 @@
 @numberoffullyears: 15;
 
 .basefont {
-  font-family: 'Ubuntu Mono', monospace;
+  font-family: 'Pathway Gothic One', sans-serif;
   font-weight: 400;
   color: @basecolor;
 }
