--- a/css/uzem.less
+++ b/css/uzem.less
@@ -65,35 +65,17 @@ header {
     .displayfont;
     font-size: 35px;
     margin-bottom: 0px;
-    display: inline;
-
-    @media screen and (max-width: @breakpoint1) {
-      display: block;
-      font-size: 50px;
-    }
+    display: block;
+    font-size: 50px;
   }
 
   h2, h3 {
     font-size: @basepadding * 3;
-    margin-left: @basepadding * 2;
-    display: inline-block;
-    font-weight: 400;
-    background-color: rgba(255,255,255,0.7);
-
-    @media screen and (max-width: @breakpoint1) {
-      margin-left: 0;
-      display: block;
-    }
+    .basefont;
+    display: block;
   }
 
   h3 {
-    float: right;
-    margin-right: @basepadding * 4;
-
-    @media screen and (max-width: @breakpoint1) {
-      margin-right: 0;
-      float: none;
-    }
   }
-  
+
 }
