--- a/css/uzem.less
+++ b/css/uzem.less
@@ -80,3 +80,30 @@ header {
   }
 
 }
+
+/* TIMELINE */
+
+timeline {
+
+    width: 100vw;
+    height: 100vh;
+    display: block;
+    bottom: 0vh;
+    overflow: visible;
+    position: absolute;
+    height: (100vh * @numberoffullyears) + (50vh * (@numberofyears - @numberoffullyears + 1));
+    top: 30vh;
+
+    .line {
+      display: block;
+      width: 1vw;
+      height: (100vh * @numberoffullyears) + (50vh * (@numberofyears - @numberoffullyears + 1));
+      left: 49.5vw;
+      top: 0;
+      background: @basecolor;
+      background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 3%, rgba(0,0,0,1) 99%, rgba(0,0,0,0) 100%);
+      background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 3%, rgba(0,0,0,1) 99%, rgba(0,0,0,0) 100%);
+      background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 3%, rgba(0,0,0,1) 99%, rgba(0,0,0,0) 100%);
+    }
+
+}
