Position was föcked

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -96,6 +96,7 @@ timeline {
 
     .line {
       display: block;
+      position: absolute;
       width: 1vw;
       height: (100vh * @numberoffullyears) + (50vh * (@numberofyears - @numberoffullyears + 1));
       left: 49.5vw;
