Header should not be fixed man

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -53,7 +53,7 @@ a {
 
 header {
   text-align: center;
-  position: fixed;
+  position: absolute;
   width: 100%;
   display: block;
   padding-top: @basepadding * 4;
