--- a/css/uzem.less
+++ b/css/uzem.less
@@ -107,4 +107,52 @@ timeline {
       background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 3%, rgba(0,0,0,1) 99%, rgba(0,0,0,0) 100%);
     }
 
+    .yearmarkers {
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      year {
+        height: 100vh;
+        width: 100vw;
+        display: block;
+        position: absolute;
+        background: rgba(0,0,0,0.1);
+        box-sizing: border-box;
+
+        &:nth-child(odd) {
+          background: rgba(0,0,0,0);
+        }
+        .yearloop(@counter) when (@counter > 0) {
+          .yearloop((@counter - 1));
+          &:nth-child(@{counter}) {
+            top: 100vh * (@counter - 1);
+            left: 0;
+            & when (@counter > @numberoffullyears + 1) {
+              top: 100vh * @numberoffullyears + 50vw * (@counter - @numberoffullyears);
+              height: 50vh;
+              width: 100vw;
+              left: 0;
+            }
+            &:after {
+              @actualyear: 2017 - @counter + 1;
+              content: "@{actualyear}";
+            }
+          }
+        }
+
+        .yearloop(@numberofyears);
+
+        &:after {
+          .displayfont;
+          display: block;
+          position: absolute;
+          font-size: 70px;
+          bottom: auto;
+          top: @basepadding * 4;
+          z-index: 15;
+        }
+      }
+    }
+
 }
